--- a/text/references.bib
+++ b/text/references.bib
@@ -484,3 +484,39 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   number = {7},
   pages = {615--621}
 }
+
+@article{breast-subtypes,
+  author = {Skibinski, A. and Kuperwasser, C.},
+  title = {The origin of breast tumor heterogeneity},
+  journal = {oncogene},
+  year = {2015},
+  volume = {34},
+  number = {42},
+  pages = {5309–-5316},
+  pmid = {25703331},
+  doi = {10.1038/onc.2014.475}
+}
+
+@article{spliceAI,
+  author = {Jaganathan, K. and Panagiotopoulou, S.K. and McRae, J.F. and Darbandi, S.F. and Knowles, D. and Li, Y.I. and Kosmicki, J.A. and Arbelaez, J. and Cui, W. and Schwartz, G.B. and Chow, E.D. and Kanterakis, E. and Gao, H. and Kia, A. and Batzoglou, S. and Sanders, S.J. and Farh, K.K.},
+  title = {Predicting Splicing from Primary Sequence with Deep Learning},
+  journal = {Cell},
+  year = {2019},
+  volume = {176},
+  number = {3},
+  pages = {535--548},
+  pmid = {30661751},
+  doi = {10.1016/j.cell.2018.12.015}
+}
+
+@article{deep-learning-clinical-variants,
+  author = {Sundaram, L. and Gao, H. and Padigepati, S.R. and McRae, J.F. and Li, Y. and Kosmicki, J.A. and Fritzilas, N. and Hakenberg, J. and Dutta, A. and Shon, J. and Xu, J. and Batzoglou, S. and Li, X. and Farh, K.K.},
+  title = {Predicting the clinical impact of human mutation with deep neural networks},
+  journal = {Nature Genetics},
+  year = {2018},
+  volume = {50},
+  number = {8},
+  pages = {1161--1170},
+  pmid = {30038395},
+  doi = {10.1038/s41588-018-0167-z}
+}
