--- a/text/discussion.Rmd
+++ b/text/discussion.Rmd
@@ -1,55 +1,54 @@
-### Classification of tumors independent of tissue-of-origin
- 
-One of the biggest hurdles in cancer research is that the search space
-comprising ~20,000 protein-coding genes is comparable with the number of tumor
-samples, even with multiple mutations per sample. And that is not accounting for
-the fact that ~30k non-coding genes and hundreds of thousands of non-coding
-regulatory elements exist with oncogenic or tumor suppressor potential
-[@deesMuSiC2012; @tamboreroOncodriveCLUST2013;
+### Classification of tumors independent of tissue-of-origin 
+
+One of the biggest hurdles in cancer research is the size of the search space;
+~20,000 protein-coding genes is comparable with the number of tumor samples,
+even with multiple mutations per sample. And that is not accounting for the fact
+that ~30k non-coding genes and hundreds of thousands of non-coding regulatory
+elements exist with oncogenic or tumor suppressor activity [@deesMuSiC2012;
+@tamboreroOncodriveCLUST2013;
 @lawrenceDiscoverySaturationAnalysis2014;
 @kumarStatisticallyIdentifyingTumor2015; @jiangWITER2019;
 @zhaoModelingPositive2019; @non-coding-mutations-Zhang]. Hence, we sought to
-investigate cancer as a disease of basic cellular and biochemical pathways,
-which we accomplished by translating gene-level mutations into pathway level
-disruptions. Our approach differs from previously proposed methods [@PATHNET] in
-that we chose to focus on pathways as the unit of disruption instead of the
-gene, using the conceit that individual mutations may be sufficient to disrupt
-entire pathways (as is often the case with drivers). Rather than evaluating the
-burden of mutations on each pathway within or across tumors, which can be biased
-by the number of genes or the coverage of pathway-linked genes in the genome,
-and which we find to be relatively uniformly distributed, we scored each pathway
-in binary fashion, allowing one mutation or multiple mutations to count equally
-in a sample. To our knowledge, this approach has not previously been attempted
-in the literature in spite of its relative simplicity.
-
-We limited our analysis to mutations with likely deleterious effects, including
-missense, nonsense, frame-shift stop-gain and splice site mutations in genes
-that are actively expressed in each cancer type, thus avoiding bias from
-transcription coupled repair. Our method of filtration differs from the
-"rank-and-cut" method of [@PCAWG-MAIN] but represents a reasonable attempt to
-account for the same biases. We also filtered genes on the basis of pathway
-membership in biochemical pathways, excluding curated genesets related to
-diseases, syndromes, or classes of proteins ( _e.g._ transcription factors). We
-chose this approach to limit redundancy, which is already high in the remaining
-pathways for some driver genes, and to exclude biologically unrelated
-collections of genes. We do not account for non-coding mutations, amplification
-events or structural variants, though we hope to include them in subsequent
-studies (see below). Our pathway-centric analysis also allows us to circumvent
-the problem that some cancer-promoting mutations likely occur at low enough
-frequencies as to be indistinguishable from background. Attempts to capture
-these associations better using Bayesian networks have yielded important new
-insights into this problem and new genes that would not have been possible with
-traditional analysis [@hornNetSigNetworkbasedDiscovery2018], supporting the case
-that pathway-centric approaches like ours have the potential to increase
+simplify the problem by investigating cancer as a disease of basic cellular and
+biochemical pathways, which we accomplished by translating gene-level mutations
+into pathway level disruptions. Our approach differs from previously proposed
+methods [@PATHNET] in that we chose to focus on the pathway as the unit of
+disruption instead of the gene, employing the conceit that individual mutations
+may be sufficient to disrupt entire pathways (as is often the case with
+drivers). Rather than evaluating the burden of mutations on each pathway within
+or across tumors, which can be biased by the number of genes or the coverage of
+pathway-linked genes in the genome, and which we find to be relatively uniformly
+distributed, we scored each pathway in binary fashion, allowing one mutation or
+multiple mutations to count equally for each sample. To our knowledge, this
+approach has not previously been attempted in the literature in spite of its
+relative simplicity. We limited our analysis to mutations with likely
+deleterious effects, including missense, nonsense, frame-shift, stop-gain and
+splice site mutations in genes that are actively expressed in each cancer type,
+thus avoiding bias from transcription coupled repair. Our method of filtration
+differs from the "rank-and-cut" method of [@PCAWG-MAIN] but represents a
+reasonable attempt to account for the same biases. We also filtered genes on the
+basis of pathway membership in biochemical pathways, excluding curated genesets
+related to diseases, syndromes, or classes of proteins ( _e.g._ transcription
+factors). We chose this approach to limit redundancy, which is already high in
+the remaining pathways for some driver genes, and to exclude biologically
+unrelated collections of genes. We do not account for non-coding mutations,
+amplification events or structural variants, though we hope to include them in
+subsequent studies (see below). Our pathway-centric analysis also allows us to
+circumvent the problem that some cancer-promoting mutations likely occur at low
+enough frequencies as to be indistinguishable from background. Attempts to
+capture these associations better using Bayesian networks have yielded important
+new insights into this problem and new genes that would not have been possible
+with traditional analysis [@hornNetSigNetworkbasedDiscovery2018], supporting the
+case that pathway-centric approaches like ours have the potential to increase
 statistical power.
 
-The hypothesis that cancer is the result of dysfunction from a limited number of
-basic cellular processes common to all living human cells was first
-introduced and later expanded on in a pair of classic essays by Hanahan and
-Weinberg [@weinberg200; @hallmarks_II]. In this view, all tumors regardless of
-tissue of origin acquire 6 essential phenotypes; sustaining proliferative
-signaling, evading growth suppressors, replicative immortality, evading
-apoptosis, supportive angiogenesis, tissue invasion and metastasis
+The hypothesis that cancer is the result of dysfunction from
+a limited number of basic cellular processes common to all living human cells
+was first introduced and later expanded on in a pair of classic essays by
+Hanahan and Weinberg [@weinberg200; @hallmarks_II]. In this view, all tumors
+regardless of tissue of origin acquire 6 essential phenotypes; sustaining
+proliferative signaling, evading growth suppressors, replicative immortality,
+evading apoptosis, supportive angiogenesis, tissue invasion and metastasis
 [@weinberg2000]. Advancements in the field over the ensuing decade led to the
 inclusion of new tumor promoting processes, namely deregulation of cellular
 energy cycle, tumor promoting inflammation, evasion of the immune system, genome
@@ -68,8 +67,8 @@ tissue-of-origin remains the most important driver of tumor characteristics at
 every scale and by every measure. Our observations contrast with this view, and
 instead support an interpretation of publicly available data in which all tumors
 manifest one of a limited number of metastable phenotypes resulting from
-disruptions in basic pathways represented by our classes (**figure 1**). Each
-of these classes may represent unique combinations of pathway disruptions with
+disruptions in basic pathways represented by our classes (**figure 1**). Each of
+these classes may represent unique combinations of pathway disruptions with
 increased fitness regardless of tissue of origin, which then converge on end
 stage cancer by accumulating complementary mutations to the other classes
 (**figures 1L and M** and **Table 2**).
@@ -102,9 +101,9 @@ subtypes amongst our classes, since some treatment regimens have greater
 efficacy for a significant fraction of patients of a given cancer/histological
 subtype. Nonetheless, the basis for some tumors being treatment-refractory in
 spite of receiving the standard of clinical care for diagnostic markers remains
-elusive. Doubtless some of this is due to bad luck, as tumors can metastasis and
-remain dormant years before they are detected at distal sites [@hallmarks_II], or
-resistant clones may have already arisen at undetectable levels, but our
+elusive. Doubtless some of this is due to bad luck, as tumors can metastasize
+and remain dormant years before they are detected at distal sites, or resistant
+clones may have already arisen at undetectable levels [@hallmarks_II], but our
 analysis suggests the possibility of identifying more informative molecular,
 histological or cellular subtypes that could form a basis for future separation
 of patients into different precision treatment regimens.
@@ -118,7 +117,7 @@ cancers have available to them a limited number of stable configurations with
 respect to pathway disruption which are consistent with increased fitness and
 therefore positive selection.
 
-### Incompleteness of the pathway disruption data
+### Incompleteness of the pathway disruption data 
 
 Finally, we must remark on the limitations of our work exemplified in two of the
 classes, 1 and 10, which for which we did not find distinctive associations with
@@ -143,11 +142,11 @@ algorithms for filtering likely passenger mutations [ _e.g._ @spliceAI;
 other data into a pathway-centric analysis as we have done here for point
 mutations and indels.
 
-### Estimates of survival reveal pathway-dependent differences
+### Estimates of survival reveal pathway-dependent differences 
 
-By modeling CDC longevity data as a baseline risk function we showed that each
-of our pathway disruption classes exhibit cancer-type specific effects on
-expected survival (**figure 4**). Contrary to what one might expect at the
+By modeling CDC longevity data as a baseline risk function we showed
+that each of our pathway disruption classes exhibit cancer-type specific effects
+on expected survival (**figure 4**). Contrary to what one might expect at the
 outset, we found that models assuming different survival based on class _and_
 cancer type fit better than models in which these variables are independent
 factors. However, considering that within each cancer type there are different
@@ -161,12 +160,12 @@ standard of care for one cancer and class could produce different outcomes than
 the same class of a different cancer type under the circumstances.
 Unfortunately, given the diversity drug classes and treatments (including
 non-chemical treatments such as surgery and palliative care), we lack sufficient
-power in the current study to explore these variables in the TCGA data. It is our
-hope that more focused future studies will help to distinguish between
+power in the current study to explore these variables in the TCGA data. It is
+our hope that more focused future studies will help to distinguish between
 treatment-specific effects or survival given different pathway disruption
-classes.
+classes. 
 
-### Implications for the evolution of cancer
+### Implications for the evolution of cancer 
 
 Our findings imply that there are separate processes in the etiology of cancer
 that can be broadly thought of as general cancer promoting, class-specific
@@ -194,43 +193,50 @@ that are known to be responsible for discrete mutation signatures such as
 APOBEC, BRCA1 and BRCA2 produce mutational hotspots reflecting the varying
 selective pressures in different tissues [@PCAWG-MAIN].
 
-One of the drawbacks of bulk tumor whole genome sequencing data is the problem
-of tumor heterogeneity, thus consortium samples are likely to
+One of the drawbacks of bulk tumor whole genome sequencing data
+is the problem of tumor heterogeneity, thus consortium samples are likely to
 contain contamination from support tissue and inflammatory and immune cells of
 the innate and adaptive immune systems, potentially harboring cancer supporting
 mutations [@bhowmick_review]. We think it will be instructive to explore these
 ideas in the context of single cell experiments.
 
-### On metastasis as a convergence of phenotypes
+### On metastasis as a convergence of phenotypes 
 
-We report that pathway enrichment in metastatic tumors across all classes
-(pooled) yielded generally lower effect sizes and larger p-values than the
-cluster specific analysis, suggesting that signal is diluted when the samples
-are analyzed this way, and supporting the view that metastasis has
-class-specific requirements. Since the number of metastatic tumors is relatively
-low this part of our analysis is likely underpowered and subject to expanded
-analysis with larger cohorts. Nonetheless, the class-specific metastatic pathway
-enrichment we observe (in **table 2**) could be a result of the pathways
-directly promoting metastatic phenotypes in these classes, or because they
-acquire a stronger or more complete oncogenic phenotype, since we don’t know the
-order in which they were acquired in individual tumor samples. The fact that
-most metastatic enrichment is cluster-specific and has a tendency to overlap
-with cluster-specific pathways from non-metastatic tumors of neighboring
-clusters favors the latter interpretation, and suggests a mechanism of
-complementarity, in which newly acquired mutations result in similar classes
+We report that pathway enrichment in metastatic tumors
+across all classes (pooled) yielded generally lower effect sizes and larger
+p-values than the cluster specific analysis, suggesting that signal is diluted
+when the samples are analyzed this way, and supporting the view that metastasis
+has class-specific requirements. Since the number of metastatic tumors is
+relatively low this part of our analysis is likely underpowered and subject to
+expanded analysis with larger cohorts. Nonetheless, the class-specific
+metastatic pathway enrichment we observe (in **table 2**) could be a result of
+the pathways directly promoting metastatic phenotypes in these classes, or
+because they acquire a stronger or more complete oncogenic phenotype, since we
+don’t know the order in which they were acquired in individual tumor samples.
+The fact that most metastatic enrichment is cluster-specific and has a tendency
+to overlap with cluster-specific pathways from non-metastatic tumors of
+neighboring clusters favors the latter interpretation, and suggests a mechanism
+of complementarity, in which newly acquired mutations result in similar classes
 converging on a single deadly phenotype that captures most or all of the
 critical features of end-stage cancer. Some clusters were characterized by
 cluster-specific pathways that seem superficially unrelated; for example cluster
 3 has mutations impacting protein translation and turnover, whereas cluster 5
 has defects in RNA metabolism and clusters 7, 8 and 9 have defects in the more
 traditional extra-cellular signaling pathways (as exemplified in **table 1**).
-It may be that the primary effects of mutations in polymer metabolism in cluster
-3 and 5 point to currently unappreciated mechanisms impacting hallmark pathways.
-Clusters 3 and 5 are also marked by a decidedly different set of pathways in
-metastasis. Clusters 3 and 5 notably have (in addition to EGFR signaling)
-mutations in glucagon and glycogen metabolism, respectively, in their metastases
-(**table 2**), consistent with energy metabolism as one of the new hallmarks
-[@hallmarks_II], but also distinguishing these classes from the others in the
-order or nature of hallmark acquisition. We submit that when we discover the
-requirements of each cluster with respect to metastasis we may be able to target
-them therapeutically and prevent further adaptation.
+It may be that the primary effects of mutations in protein and RNA metabolism in
+clusters 3 and 5 point to currently unappreciated mechanisms impacting hallmark
+pathways. Clusters 3 and 5 are also marked by a decidedly different set of
+pathways in metastasis. Clusters 3 and 5 notably have (in addition to signaling
+pathways) mutations in glucagon and glycogen metabolism, respectively, in their
+metastases (**table 2**), consistent with energy metabolism as one of the new
+hallmarks [@hallmarks_II], but also distinguishing these classes from the others
+in the order or nature of hallmark acquisition. Thus, even at relatively low
+power, our analysis of metastasis further supports pathway-centric analysis of
+tumors as indicative of real differences in underlying biology. As a major
+caveat to this, we acknowledge that many therapies do target specific signaling
+pathways ( _e.g._ EGFR or HER2), but understanding the broader context of the
+genetic background and pathway vulnerability of tumors containing such markers
+may aid in creating smarter combination therapies. We submit that when we
+discover the requirements of each cluster with respect to pathway disruptions
+and metastasis we may be able to target them therapeutically and prevent further
+adaptation.
